# graphql-test

./: Taskfile.yaml  payload.json  query.json  query_fake.json  readme.md  test.sh
.github/workflows/: build-test.yaml
ariadne-test/: Taskfile.yaml  pyproject.toml
ariadne-test/src/: main.py
async-graphql-test/: Cargo.toml  Taskfile.yaml
async-graphql-test/src/: main.rs
gqlgen-test/: Taskfile.yaml  go.mod  gqlgen.yml  server.go
gqlgen-test/graph/: schema.graphqls  schema.resolvers.go
gqlgen-test/graph/model/: models_gen.go
mercurius-test/: Taskfile.yaml  nohup.out  package-lock.json  package.json
mercurius-test/src/: main.ts
pytest-test/: Taskfile.yaml  pyproject.toml
pytest-test/tests/: test_main.py
strawberry-test/: Taskfile.yaml  pyproject.toml
strawberry-test/src/: main.py
