[tool.poetry]
name = "ariadne-test"
version = "0.1.0"
description = ""
authors = ["Audun Ask Blaker <audun@askblaker.com>"]

[tool.poetry.dependencies]
python = "^3.8"
strawberry-graphql = {extras = ["asgi"], version = "^0.138.1"}
uvicorn = "^0.19.0"

[tool.poetry.dev-dependencies]
flake8 = "^5.0.4"
black = "^22.10.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
